--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_bloc: ^6.0.1
 
   intl: ^0.16.1
   intl_translation: ^0.17.9
