--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_bloc: ^6.0.1
+  equatable: ^1.2.3
 
   intl: ^0.16.1
   intl_translation: ^0.17.9
