--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-#  bloc: ^6.0.1
+  bloc: ^6.0.1
   flutter_bloc: ^6.0.1
   equatable: ^1.2.3
 
