--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   bloc: ^6.0.1
   flutter_bloc: ^6.0.1
   equatable: ^1.2.3
+  shared_preferences: ^0.5.10
 
   intl: ^0.16.1
   intl_translation: ^0.17.9
