--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_bloc: ^6.0.1
   equatable: ^1.2.3
   shared_preferences: ^0.5.10
+  flutter_tts: ^1.2.7
 
   intl: ^0.16.1
   intl_translation: ^0.17.9
