--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   equatable: ^1.2.3
   shared_preferences: ^0.5.10
   flutter_tts: ^1.2.7
+  yaml: ^2.2.1
 
   intl: ^0.16.1
   intl_translation: ^0.17.9
@@ -49,6 +50,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - res/texts/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
