--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,18 +24,21 @@ dependencies:
   bloc: ^6.0.1
   flutter_bloc: ^6.0.1
   equatable: ^1.2.3
-  shared_preferences: ^0.5.10
+  shared_preferences: ^2.0.5
   flutter_tts: ^1.2.7
   yaml: ^2.2.1
   http: ^0.12.2
   speech_to_text: ^3.0.0
 
-  intl: ^0.16.1
-  intl_translation: ^0.17.9
+  intl_translation: ^0.17.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+
+dependency_overrides:
+  intl: 0.17.0
+
 
 dev_dependencies:
   flutter_test:
