--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_tts: ^3.1.0
   http: ^0.13.3
   speech_to_text: ^4.1.1-nullsafety
+  flutter_secure_storage: ^4.2.0
 
   intl_translation: ^0.17.10
 
